@startuml
'https://plantuml.com/class-diagram

Particle <|-- BrownianMovement
Particle <|- OvitoGen
OvitoGen <|-- Main
BrownianMovement <|-- Main
StaticData <|-- Main
Collision <|- BrownianMovement
COLLISIONTYPE <|- Collision

enum COLLISIONTYPE {
VERWALL
HORWALL
PARTCOL
}

class Main {
    + static void main(String[] args)
    + static StaticData readStaticFile(String)
}

class StaticData {
    - float size
    - float r1
    - float r2
    - float m1
    - float m2

    StaticData(float, float, float, float, float)
}

class OvitoGen{
    + void saveDynamicFile(int, List<Particle>, String)
}

class Particle{
    float xPos
    float yPos
    float xVel
    float yVel
    float radius
    float mass
    float collisionTime

    + Particle(float, float, float, float, float, float)
    + Float particleCollision(Particle)
    + void newPosition(Float)
    + Float verticalWallCollision(float)
    + Float horizontalWallCollision(float)
}

class BrownianMovement {
    - int maxIterations
    - int maxSimulatedTime
    - int maxAttempts
    - double maxVel
    - int N
    - List<Particle> particles
    + SortedMap<Float, List<Particle>> states
    float time
    int iterations

    + BrownianMovement(int, float, StaticData)
    - boolean finish()
    - void generateParticles()
    - boolean addParticle(float, float, float, float)
    - float nextCollisionTime()
    - void updateStatus(float)
    - void generateCollision()

}

class Collision {
    COLLISIONTYPE type
    Particle p1
    Particle p2
    float time
    + Collision(float, COLLISIONTYPE, Particle)
    + Collision(float, COLLISIONTYPE, Particle, Particle)
}


@enduml